Closed Bug 729649 Opened 13 years ago Closed 12 years ago

XP determinate progress meters are not properly chunked

Categories

(Core :: Widget: Win32, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: jimm, Assigned: jimm)

References

Details

Attachments

(1 file, 2 obsolete files)

Almost seems like a waste of time to finally fix this, but as long as I'm in the code. Progress meters on XP should be chunk style vs. fill using the chunk graphic. We paint the right theme element but we don't break it up into proper chunks.
Attached patch fix v.1 (obsolete) — Splinter Review
Assignee: nobody → jmathies
Attached patch fix v.1 (obsolete) — Splinter Review
Attachment #600224 - Attachment is obsolete: true
Attached patch fix v.1Splinter Review
Attachment #600712 - Attachment is obsolete: true
Attachment #600807 - Flags: review?(netzen)
Attachment #600807 - Flags: review?(netzen) → review+
No longer depends on: 726144
Blocks: 726144
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Depends on: 859276
No longer depends on: 859276
Depends on: 859276
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: