Bug 729649 Progress meters on XP should be chunk style r=bbondy